--- a/source/src/main/resources/static/css2/style.css
+++ b/source/src/main/resources/static/css2/style.css
@@ -52,6 +52,13 @@ a, a:hover, a:active{ outline:0px !important}
   font-style: normal;
 }
 
+@font-face {
+    font-family: 'Arcon-Regular';
+    src: url('../fonts2/Arcon-Regular.otf?') format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* Primary Styles
 ---------------------------------*/
 body {
@@ -73,7 +80,7 @@ h2{
 	text-transform:uppercase;
 }
 h3{
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Arcon-Regular', sans-serif;
 	color:#222222;
 	font-size:16px;
 	margin:0 0 5px 0;
@@ -243,6 +250,7 @@ color: #fff;
 }
 .main-section.alabaster{
 	background:#fafafa;
+	font-family: 'Arcon-Regular';
 }
 
 /* Featured Work
@@ -634,7 +642,7 @@ border: 2px solid #fff;
 	font-style:normal;
 	font-size:18px;
 	color:#222222;
-	font-family: 'FontAwesome';
+	font-family: 'Arcon-Regular';
 	font-weight:normal;
 	margin-right:7px;
 }
