--- a/source/src/main/resources/templates/index2.html
+++ b/source/src/main/resources/templates/index2.html
@@ -88,7 +88,9 @@
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                <img src="img2/macbook-pro.png" alt=""/>
+                <div  style="width: 400px; height: 400px;">
+                    <img th:src="${announcement.photoURL}" alt=""/>
+                </div>
             </figure>
 
         </div>
