--- a/source/src/main/resources/templates/index2.html
+++ b/source/src/main/resources/templates/index2.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                <div  style="width: 400px; height: 400px;">
+                <div  style="width: 400px; height: 300px;">
                     <img th:src="${announcement.photoURL}" alt=""/>
                 </div>
             </figure>
@@ -98,96 +98,27 @@
 </section><!--main-section-end-->
 
 
-
-<section class="main-section alabaster"><!--main-section alabaster-start-->
+<section class="main-section paddind" id="Product"><!--main-section-start-->
     <div class="container">
-        <div class="row">
-            <figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-                <img  src="img2/iphone.png" alt=""/>
-            </figure>
-            <div class="col-lg-7 col-sm-8 featured-work">
-                <h2>featured work</h2>
-                <P class="padding-b">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</P>
-                <div class="featured-box">
-                    <div class="featured-box-col1 wow fadeInRight delay-02s">
-                        <i class="fa-magic"></i>
-                    </div>
-                    <div class="featured-box-col2 wow fadeInRight delay-02s">
-                        <h3>magic of theme development</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
-                    </div>
-                </div>
-                <div class="featured-box">
-                    <div class="featured-box-col1 wow fadeInRight delay-04s">
-                        <i class="fa-gift"></i>
-                    </div>
-                    <div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>neatly packaged</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
-                    </div>
-                </div>
-                <div class="featured-box">
-                    <div class="featured-box-col1 wow fadeInRight delay-06s">
-                        <i class="fa-dashboard"></i>
-                    </div>
-                    <div class="featured-box-col2 wow fadeInRight delay-06s">
-                        <h3>SEO optimized</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
-                    </div>
-                </div>
-                <a class="Learn-More" href="#">Learn More</a>
-            </div>
-        </div>
-    </div>
-</section><!--main-section alabaster-end-->
-
-
-
-<section class="main-section paddind" id="Portfolio"><!--main-section-start-->
-    <div class="container">
-        <h2>Portfolio</h2>
-        <h6>Fresh portfolio of designs that will keep you wanting more.</h6>
-        <div class="portfolioFilter">
-            <ul class="Portfolio-nav wow fadeIn delay-02s">
+        <h2>Product</h2>
+        <h6>Fresh product of designs that will keep you wanting more.</h6>
+        <div class="productFilter">
+            <ul class="Product-nav wow fadeIn delay-02s">
                 <li><a href="#" data-filter="*" class="current" >All</a></li>
-                <li><a href="#" data-filter=".branding" >Branding</a></li>
-                <li><a href="#" data-filter=".webdesign" >Web design</a></li>
-                <li><a href="#" data-filter=".printdesign" >Print design</a></li>
-                <li><a href="#" data-filter=".photography" >Photography</a></li>
+                <li><a href="#" data-filter=".zeytin" >Zeytin</a></li>
+                <li><a href="#" data-filter=".sut" >Süt</a></li>
+                <li><a href="#" data-filter=".peynir" >Peynir</a></li>
+                <li><a href="#" data-filter=".tursu" >Turşu</a></li>
             </ul>
         </div>
-
     </div>
-    <div class="portfolioContainer wow fadeInUp delay-04s">
-        <div class=" Portfolio-box printdesign">
-            <a href="#"><img src="img2/Portfolio-pic1.jpg" alt=""/></a>
-            <h3>Foto Album</h3>
-            <p>Print Design</p>
-        </div>
-        <div class="Portfolio-box webdesign">
-            <a href="#"><img src="img2/Portfolio-pic2.jpg" alt=""/></a>
-            <h3>Luca Theme</h3>
-            <p>Web Design</p>
-        </div>
-        <div class=" Portfolio-box branding">
-            <a href="#"><img src="img2/Portfolio-pic3.jpg" alt=""/></a>
-            <h3>Uni Sans</h3>
-            <p>Branding</p>
-        </div>
-        <div class=" Portfolio-box photography" >
-            <a href="#"><img src="img2/Portfolio-pic4.jpg" alt=""/></a>
-            <h3>Vinyl Record</h3>
-            <p>Photography</p>
-        </div>
-        <div class=" Portfolio-box branding">
-            <a href="#"><img src="img2/Portfolio-pic5.jpg" alt=""/></a>
-            <h3>Hipster</h3>
-            <p>Branding</p>
-        </div>
-        <div class=" Portfolio-box photography">
-            <a href="#"><img src="img2/Portfolio-pic6.jpg" alt=""/></a>
-            <h3>Windmills</h3>
-            <p>Photography</p>
+    <div th:each="product : ${latestproducts}">
+        <div class="productContainer wow fadeInUp delay-04s">
+            <div class=" Product-box" th:classappend="${product.productType.name}">
+                <a href="#"><img th:src="${product.photoURL}" alt=""/></a>
+                <h3><span th:text="${product.description}">text</span></h3>
+                <p><span th:text="${product.price}">text</span> TRY</p>
+            </div>
         </div>
     </div>
 </section><!--main-section-end-->
