--- a/source/src/main/resources/templates/index2.html
+++ b/source/src/main/resources/templates/index2.html
@@ -40,13 +40,13 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
     <div class="container">
         <ul class="main-nav">
-            <li><a href="#header">Ana Sayfa</a></li>
-            <li><a href="#haberler">Haberler</a></li>
-            <li><a href="#Products">Ürünler</a></li>
+            <li><a href="/">Ana Sayfa</a></li>
+            <li><a href="/announcements">Haberler</a></li>
+            <li><a href="/products">Ürünler</a></li>
             <li class="small-logo"><a href="#header"><img src="img2/small-logo.png" alt=""/></a></li>
-            <li><a href="#client">Üreticiler</a></li>
-            <li><a href="#team">Bültenler</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="/producers">Üreticiler</a></li>
+            <li><a href="/bulletins">Bültenler</a></li>
+            <li><a href="/#contact">İletişim</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
@@ -83,7 +83,7 @@
 
 <section class="main-section paddind" id="Products"><!--main-section-start-->
     <div class="container">
-        <h2>Products</h2>
+        <h2>Ürünler</h2>
         <h6>Üreticilerimizden taptaze ürünler.</h6>
         <div class="productFilter">
             <ul class="Product-nav wow fadeIn delay-02s">
@@ -97,7 +97,7 @@
     </div>
     <div class="productContainer wow fadeInUp delay-04s" th:each="product : ${latestproducts}">
         <div class=" Product-box isotope-item" th:classappend="${product.productType.name}">
-            <a href="#"><img th:src="${product.photoURL}" alt=""/></a>
+            <a th:href="@{'/product/' + ${product.id}}"><img th:src="${product.photoURL}" alt=""/></a>
             <h3><span th:text="${product.description}">text</span></h3>
             <p><span th:text="${product.price}">text</span> TRY</p>
         </div>
