--- a/source/src/main/resources/templates/products.html
+++ b/source/src/main/resources/templates/products.html
@@ -11,27 +11,27 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'/>
 
-    <link href="/css2/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/style.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/font-awesome.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/responsive.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/animate.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/style.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/font-awesome.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/responsive.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/animate.css" rel="stylesheet" type="text/css"/>
 
     <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
 
-    <script type="text/javascript" src="/js2/jquery.1.8.3.min.js"></script>
-    <script type="text/javascript" src="/js2/bootstrap.js"></script>
-    <script type="text/javascript" src="/js2/jquery-scrolltofixed.js"></script>
-    <script type="text/javascript" src="/js2/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="/js2/jquery.isotope.js"></script>
-    <script type="text/javascript" src="/js2/wow.js"></script>
-    <script type="text/javascript" src="/js2/classie.js"></script>
+    <script type="text/javascript" src="js2/jquery.1.8.3.min.js"></script>
+    <script type="text/javascript" src="js2/bootstrap.js"></script>
+    <script type="text/javascript" src="js2/jquery-scrolltofixed.js"></script>
+    <script type="text/javascript" src="js2/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="js2/jquery.isotope.js"></script>
+    <script type="text/javascript" src="js2/wow.js"></script>
+    <script type="text/javascript" src="js2/classie.js"></script>
 
 
     <!--[if lt IE 9]>
-    <script src="/js2/respond-1.1.0.min.js"></script>
-    <script src="/js2/html5shiv.js"></script>
-    <script src="/js2/html5element.js"></script>
+    <script src="js2/respond-1.1.0.min.js"></script>
+    <script src="js2/html5shiv.js"></script>
+    <script src="js2/html5element.js"></script>
     <![endif]-->
 
 
@@ -40,43 +40,38 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
     <div class="container">
         <ul class="main-nav">
-            <li><a href="#header">Ana Sayfa</a></li>
-            <li><a href="#haberler">Haberler</a></li>
-            <li><a href="#Products">Ürünler</a></li>
-            <li class="small-logo"><a href="#header"><img src="/img2/small-logo.png" alt=""/></a></li>
-            <li><a href="#client">Üreticiler</a></li>
-            <li><a href="#team">Bültenler</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="/">Ana Sayfa</a></li>
+            <li><a href="/announcements">Haberler</a></li>
+            <li><a href="/products">Ürünler</a></li>
+            <li class="small-logo"><a href="#header"><img src="img2/small-logo.png" alt=""/></a></li>
+            <li><a href="/producers">Üreticiler</a></li>
+            <li><a href="/bulletins">Bültenler</a></li>
+            <li><a href="/#contact">İletişim</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
 </nav><!--main-nav-end-->
 
 
-
-<section class="main-section" id="haberler"><!--main-section-start-->
+<section class="main-section paddind" id="Products"><!--main-section-start-->
     <div class="container">
-        <h2><span th:text="${product.description}">text</span></h2>
-        <div class="row">
-            <div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
-                <div class="service-list">
-                    <div class="service-list-col1">
-                        <i class="fa-paw"></i>
-                    </div>
-                    <div class="service-list-col2">
-                        <h3><span th:text="${product.productType.name}">text</span></h3>
-                        <h3><span th:text="${product.producer.name}">text</span></h3>
-                        <h3><span th:text="${product.packageType.name}">text</span></h3>
-                        <h3><span th:text="${product.price}">text</span></h3>
-                    </div>
-                </div>
-            </div>
-            <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                <div  style="width: 400px; height: 300px;">
-                    <img th:src="${product.photoURL}" alt=""/>
-                </div>
-            </figure>
-
+        <h2>Products</h2>
+        <h6>Üreticilerimizden taptaze ürünler.</h6>
+        <div class="productFilter">
+            <ul class="Product-nav wow fadeIn delay-02s">
+                <li><a href="#" data-filter="*" class="current" >All</a></li>
+                <li><a href="#" data-filter=".zeytin" >Zeytin</a></li>
+                <li><a href="#" data-filter=".sut" >Süt</a></li>
+                <li><a href="#" data-filter=".peynir" >Peynir</a></li>
+                <li><a href="#" data-filter=".tursu" >Turşu</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="productContainer wow fadeInUp delay-04s" th:each="product : ${products}">
+        <div class=" Product-box isotope-item" th:classappend="${product.productType.name}">
+            <a href="#"><img th:src="${product.photoURL}" alt=""/></a>
+            <h3><span th:text="${product.description}">text</span></h3>
+            <p><span th:text="${product.price}">text</span> TRY</p>
         </div>
     </div>
 </section><!--main-section-end-->
@@ -84,7 +79,7 @@
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="#"><img src="/img2/footer-logo.png" alt=""/></a></div>
+        <div class="footer-logo"><a href="#"><img src="img2/footer-logo.png" alt=""/></a></div>
         <span class="copyright">Copyright © 2014-2016 | BüKoop</span>
     </div>
     <!--
