--- a/source/src/main/resources/templates/producers.html
+++ b/source/src/main/resources/templates/producers.html
@@ -40,29 +40,28 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
     <div class="container">
         <ul class="main-nav">
-            <li><a href="#header">Ana Sayfa</a></li>
-            <li><a href="#haberler">Haberler</a></li>
-            <li><a href="#Products">Ürünler</a></li>
+            <li><a href="/">Ana Sayfa</a></li>
+            <li><a href="/announcements">Haberler</a></li>
+            <li><a href="/products">Ürünler</a></li>
             <li class="small-logo"><a href="#header"><img src="/img2/small-logo.png" alt=""/></a></li>
-            <li><a href="#client">Üreticiler</a></li>
-            <li><a href="#team">Bültenler</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="/producers">Üreticiler</a></li>
+            <li><a href="/bulletins">Bültenler</a></li>
+            <li><a href="/#contact">İletişim</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
 </nav><!--main-nav-end-->
 
 
-
-<section class="main-section" id="haberler"><!--main-section-start-->
+<section class="main-section paddind" id="Products"><!--main-section-start-->
     <div class="container">
-        <h2><span th:text="${producer.name}">text</span></h2>
-        <div class="row">
-            <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                <div  style="width: 400px; height: 300px;">
-                    <img th:src="${producer.photoURL}" alt=""/>
-                </div>
-            </figure>
+        <h2>Üreticilerimiz</h2>
+        <h6>Taptaze ürünlerimizi üreten üreticilerimiz.</h6>
+    </div>
+    <div class="producerContainer wow fadeInUp delay-04s" th:each="producer : ${producers}">
+        <div class=" Product-box isotope-item" th:classappend="${producer.name}">
+            <a href="#"><img th:src="${producer.photoURL}" alt=""/></a>
+            <h3><span th:text="${producer.name}">text</span></h3>
         </div>
     </div>
 </section><!--main-section-end-->
@@ -130,7 +129,7 @@
     $(window).load(function(){
 
 
-        var $container = $('.productContainer'),
+        var $container = $('.producerContainer'),
                 $body = $('body'),
                 colW = 375,
                 columns = null;
@@ -156,8 +155,8 @@
             }
 
         }).smartresize(); // trigger resize to set container width
-        $('.productFilter a').click(function(){
-            $('.productFilter .current').removeClass('current');
+        $('.producerFilter a').click(function(){
+            $('.producerFilter .current').removeClass('current');
             $(this).addClass('current');
 
             var selector = $(this).attr('data-filter');
