--- a/source/src/main/resources/templates/roles.html
+++ b/source/src/main/resources/templates/roles.html
@@ -40,54 +40,28 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
     <div class="container">
         <ul class="main-nav">
-            <li><a href="#header">Ana Sayfa</a></li>
-            <li><a href="#haberler">Haberler</a></li>
-            <li><a href="#Products">Ürünler</a></li>
+            <li><a href="/">Ana Sayfa</a></li>
+            <li><a href="/announcements">Haberler</a></li>
+            <li><a href="/products">Ürünler</a></li>
             <li class="small-logo"><a href="#header"><img src="/img2/small-logo.png" alt=""/></a></li>
-            <li><a href="#client">Üreticiler</a></li>
-            <li><a href="#team">Bültenler</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="/producers">Üreticiler</a></li>
+            <li><a href="/bulletins">Bültenler</a></li>
+            <li><a href="/#contact">İletişim</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
 </nav><!--main-nav-end-->
 
 
-<section class="main-section" id="haberler"><!--main-section-start-->
-    <form  method="post" action="#" th:object="${transaction}" th:action="@{'/transaction'}">
-        <fieldset>
-            <div>
-                <p><input type="hidden" th:field="*{id}" th:value="*{id}"/></p>
-                <p><label for="date">İşlem Tarihi:</label>
-                    <input type="date" id="date" name="date" placeholder="İşlem Tarihi" th:field="*{date}" th:value="${transaction.date != null} ? ${#dates.format(transaction.date, 'dd-MM-yyyy')} : ${#dates.format(#dates.createNow(), 'dd-MM-yyyy')}" /></p>
-                <p><label>Alıcı:</label><select th:field="*{buyer}">
-                    <option th:each="member : ${members}"
-                            th:value="${member.id}"
-                            th:text="${member.name} + ' ' + ${member.lastname}">Wireframe</option>
-                </select></p>
-                <p><label>Alıcı:</label><select th:field="*{seller}">
-                    <option th:each="member : ${members}"
-                            th:value="${member.id}"
-                            th:text="${member.name} + ' ' + ${member.lastname}">Wireframe</option>
-                </select></p>
-                <p><span th:each="transactiondetail : ${transactiondetails}">
-			        <br/><span th:text="${transactiondetail.product.description}" /> - <span th:text="${transactiondetail.amount}" />
-		        </span></p>
-                <form th:action="@{/transaction/{id}/transactiondetails(id=${transaction.id})}" method="post" enctype="multipart/form-data" >
-                    <select>
-                        <option th:each="product : ${products}"
-                                th:value="${product.id}"
-                                th:text="${product.description}">Product</option>
-                    </select>
-                    <input type="submit" value="Add product"/>
-                </form>
-            </div>
-        </fieldset>
-        <div class="submit">
-            <button type="submit" name="save">Kaydet</button>
+<section class="main-section paddind" id="Products"><!--main-section-start-->
+    <div class="container">
+        <h2>Kullanıcı Rolleri</h2>
+    </div>
+    <div class="producerContainer wow fadeInUp delay-04s" th:each="role : ${roles}">
+        <div>
+            <h3><span th:text="${role.name}">text</span></h3>
         </div>
-
-    </form>
+    </div>
 </section><!--main-section-end-->
 
 
@@ -153,7 +127,7 @@
     $(window).load(function(){
 
 
-        var $container = $('.productContainer'),
+        var $container = $('.producerContainer'),
                 $body = $('body'),
                 colW = 375,
                 columns = null;
@@ -179,8 +153,8 @@
             }
 
         }).smartresize(); // trigger resize to set container width
-        $('.productFilter a').click(function(){
-            $('.productFilter .current').removeClass('current');
+        $('.producerFilter a').click(function(){
+            $('.producerFilter .current').removeClass('current');
             $(this).addClass('current');
 
             var selector = $(this).attr('data-filter');
